...
                .testTag("hud_other_players_and_game"),
        ) {
            Column(Modifier.padding(Padding.medium)) {
                // A drop down button that expands and collapses the stats for other players and
                // the game
                ToggleIconButton(
                    "other_players_and_game_hud",
                    "Expand or collapse the stats for other players and the game",
                    { isExpanded = !isExpanded },
                    isExpanded,
                    Icons.Filled.ArrowDropUp,
                    Icons.Filled.Info
                )
...
    val game = gameModel.getGameData().observeAsState().value ?: return

    val openOtherPlayerInfo = remember { mutableStateOf(false) }

    Row(Modifier.padding(Padding.medium)) {
        HudButton(
            testTag = "other_player_hud",
            onClick = { openOtherPlayerInfo.value = true },
            icon = Icons.Filled.Person,
            description = "See other player information"
        )
        Column(Modifier.padding(Padding.medium)) {
            HudText("playerName-${playerData.user.name}", playerData.user.name)
...
        }
    }

    val openLocationsDialog =  remember{ mutableStateOf(false) }
    if (openLocationsDialog.value) {
        GameRepository.player?.let { player ->
            LocationsDialog(title = "Choose a location to trade", openLocationsDialog, game.getOwnedLocations(player) ) { location ->
                openLocationsDialog.value = false
                gameModel.createATradeRequest(playerData, location)
            } }
    }

    // LANDLORD ONLY: Asking for a trade
...
