...
    Dialog (
        onDismissRequest = { open.value = false },
    ) {
        Surface(
            color = MaterialTheme.colors.onBackground,
            modifier = Modifier
                .testTag("locations_list_dialog")
                .fillMaxWidth(0.95f)
        ) {
            LocationsDialogBody(locationList = locationsOwnByPlayer, title, open, onClick)
        }
    }
}
...
        Button(
            onClick = ({ open.value = false }),
            modifier = Modifier
                .testTag("locationsDialogCloseButton")
                .padding(Padding.large),
        ) {
            Text(text = "Cancel")
        }
    }
}

/**
 * A Location in the list.
...
