...
        Surface(
            color = MaterialTheme.colors.background,
            shape = Shapes.medium,
            modifier = Modifier
                .padding(Padding.medium)
                .fillMaxWidth()
                .testTag("asking_for_a_trade_dialog")
        ) {
            Column(
                modifier = Modifier
                    .padding(Padding.large),
                horizontalAlignment = Alignment.CenterHorizontally
            ) {
...
                    onClick = {
                        if(game.getOwnedLocations(player).isNotEmpty()) {
                            openLocationsDialog.value = true
                        }
                        openOtherPlayerInfo.value = false
                    },
                    modifier = Modifier.testTag("trade_button")
                ) {
                    Text(text = "Trade")
                }
            }
        }
    }
...
