...
                Spacer(modifier = Modifier.height(10.dp))
                RectangleButton(
                    onClick = {
                        gameLobbyCodeButtonOnClick(warningState, mContext)
                    }
                    , description = getString(R.string.join_game_lobby_button_text)
                    , testTag = "JoinGameLobbyButton")
                Text(
                    text = warningState.value,
                    style = MaterialTheme.typography.body2,
                    modifier = Modifier.testTag("warningMessage")
                )
            }
...
        var text by remember { mutableStateOf("") }

        OutlinedTextField(
            value = text,
            modifier = Modifier
                .width(200.dp)
                .testTag("gameLobbyCodeField"),
            // When user clicks on enter button, the focus is removed and the button is clicked
            keyboardOptions = KeyboardOptions.Default.copy(imeAction = ImeAction.Done, keyboardType = KeyboardType.Password),
            keyboardActions = KeyboardActions(onDone = {
                focusManager.clearFocus()
                gameLobbyCodeButtonOnClick(warningState, mContext)
            }),
...
                .fillMaxWidth()
                .padding(30.dp),
            horizontalAlignment = Alignment.CenterHorizontally
        ){
            Text(text = "Don't have a lobby code?"
                , style = MaterialTheme.typography.body2
                , modifier = Modifier.testTag("noGameLobbyCodeText"))
            RectangleButton(
                onClick = {
                    openList = true
                },
                description = "Show GameLobbies",
                testTag = "showGameLobbiesButton"
            )
        }

        if (openList) {
            Dialog(
                onDismissRequest = {
...

                Surface(
                    color = MaterialTheme.colors.primary,
                    modifier = Modifier
                        .fillMaxWidth(0.95f)
                        .fillMaxHeight(0.95f)
                        .testTag("gameLobbiesList"),
                ) {
                    LazyColumn(modifier = Modifier.padding(20.dp)) {
                        item {
                            Text(
                                text = getString(R.string.game_lobby_list_title),
                                style = MaterialTheme.typography.h4,
...
