<resources>
    <string name="app_name">polypoly</string>
    <string name="title_activity_greeting" />
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_sign_in">polypoly</string>
    <string name="title_activity_welcome">welcome</string>

    // LOBBIES ==================================================================
    <string name="title_activity_join_game_lobby">JoinLobby</string>
    <string name="title_create_game_lobby">CreateLobby</string>
    <string name="join_game_lobby_button_text">Join</string>
    <string name="game_lobby_does_not_exist">Lobby does not exist</string>
    <string name="game_lobby_code_is_empty">Lobby code is empty</string>
    <string name="game_lobby_is_full">Lobby is full</string>
    <string name="joined_game_lobby_with_code">Joined lobby with code: </string>
    <string name="game_lobby_list_title">Join a lobby! </string>
    <string name="title_activity_game_lobby">GameLobbyActivity</string>
    <string name="title_activity_rankings">Rankings</string>

    // create game lobby
    <string name="create_game_lobby_choose_game_name">Choose a game name</string>
    <string name="create_game_lobby_private_game">Private game :</string>
    <string name="create_game_lobby_min_num_players">Min number of players :</string>
    <string name="create_game_lobby_max_num_players">Max number of players :</string>
    <string name="create_game_lobby_num_rounds">Number of rounds :</string>
    <string name="create_game_lobby_round_duration">Round duration :</string>
    <string name="create_game_lobby_game_mode">Game mode :</string>
    <string name="create_game_lobby_initial_balance">Initial player balance:</string>
    <string name="create_game_lobby_game_code">Game code is: %s</string>
    <string name="create_game_lobby_create_game">Create game</string>
    <string name="create_game_lobby_landlord_num_properties">Initial number of buildings per Landlord:</string>

    // game lobby
    <string name="game_lobby_players_title">"Players: "</string>
    <string name="game_lobby_players_count">%s / %s</string>
    <string name="game_lobby_more_players_prefix">"At least "</string>
    <string name="game_lobby_more_players_count">%s more</string>
    <string name="game_lobby_more_players_suffix">" players needed to start…"</string>
    <string name="game_lobby_can_start_game">Start Game!</string>
    <string name="game_lobby_cannot_start_game">Can\'t start Game :(</string>
    <string name="game_lobby_admin_can_start_game">Admin can start!</string>
    <string name="game_lobby_admin_cannot_start_game">Admin can\'t start…</string>
    <string name="game_lobby_group_code_title">"Group code is: "</string>
    <string name="game_lobby_settings_title">"Game Settings"</string>
    // =========================================================================

    // GAME ==================================================================
    <string name="game_end_screen_return">"Return to menu"</string>
    <string name="game_end_screen_text">"End of the game!"</string>

</resources>