...
     * in the welcome screen (i.e. Welcome Activity)
     */
    @Composable
    fun GameLogo(size : Dp = 200.dp) {
            Image(
                painter = painterResource(id = com.github.polypoly.app.R.drawable.polypoly_logo),
                contentDescription = "game_logo",
                alignment = Alignment.Center,
                modifier = Modifier
                    .fillMaxWidth()
                    .height(size)
            )
    }
...
