...
                Image(
                    painter = painterResource(id = R.drawable.super_cool_logo),
                    contentDescription = "polypoly logo",
                    modifier = Modifier
                        .width(200.dp)
                        .height(200.dp)
                        .testTag("logo"),
                )
                Spacer(modifier = Modifier.height(50.dp))
                GroupForm()
            }
        }
    }
...
